--- a/infomapper/src/app/nav-bar/tab/tab.component.html
+++ b/infomapper/src/app/nav-bar/tab/tab.component.html
@@ -2,12 +2,8 @@
 <div *ngIf="mainMenu.menus" class="dropdown">
   <li class="nav-item dropdown">
     
-    <a mat-button
-    [matTooltip]="mainMenu.tooltip"
-    matTooltipPosition="right"
-    routerLinkActive="mat-selected"
-    class="nav-link"
-    id="navbarDropdown"
+    <a mat-button [matTooltip]="mainMenu.tooltip" matTooltipPosition="right"
+    routerLinkActive="mat-selected" class="nav-link" id="navbarDropdown"
     mainMenu-toggle="dropdown">
       {{mainMenu.name}}
     </a>
@@ -15,17 +11,16 @@
     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
       <div *ngFor="let subMenu of mainMenu.menus;">
 
+        <div *ngIf="subMenu.separatorBefore === true" class="dropdown-divider"></div>
+        <div *ngIf="subMenu.doubleSeparatorBefore === true">
+          <hr class="double-separator">
+          <hr class="double-separator">
+        </div>
+
         <div *ngIf="subMenu | checkElement : 'subMenuContentPage'">
           <li class="nav-item activate .ml-auto" [ngClass]="{ 'li-disabled': subMenu.enabled === false }">
-            <div *ngIf="subMenu.separatorBefore === true" class="dropdown-divider"></div>
-            <div *ngIf="subMenu.doubleSeparatorBefore === true">
-              <hr class="double-separator">
-              <hr class="double-separator">
-            </div>
-            <a [matTooltip]="subMenu.tooltip"
-            matTooltipPosition="right"
-            class="dropdown-item"
-            [routerLink]="['/content-page/', subMenu.id]"
+            <a [matTooltip]="subMenu.tooltip" matTooltipPosition="right"
+            class="dropdown-item" [routerLink]="['/content-page/', subMenu.id]"
             routerLinkActive="mat-selected">
               <i class="fa fa-file-text fa-lg" aria-hidden="true"></i>
               {{subMenu.name}}
@@ -35,15 +30,8 @@
 
         <div *ngIf="subMenu | checkElement : 'subMenuDashboard'">
           <li class="nav-item activate .ml-auto" [ngClass]="{ 'li-disabled': subMenu.enabled === false }">
-            <div *ngIf="subMenu.separatorBefore === true" class="dropdown-divider"></div>
-            <div *ngIf="subMenu.doubleSeparatorBefore === true">
-              <hr class="double-separator">
-              <hr class="double-separator">
-            </div>
-            <a [matTooltip]="subMenu.tooltip"
-            matTooltipPosition="right"
-            class="dropdown-item"
-            routerLinkActive="mat-selected"
+            <a [matTooltip]="subMenu.tooltip" matTooltipPosition="right"
+            class="dropdown-item" routerLinkActive="mat-selected"
             [routerLink]="['/dashboard/', subMenu.id]">
               <i class="fa fa-tachometer fa-lg" aria-hidden="true"></i>
               {{subMenu.name}}
@@ -53,15 +41,8 @@
 
         <div *ngIf="subMenu | checkElement : 'subMenuDisplayMap'">
           <li class="nav-item activate .ml-auto" [ngClass]="{ 'li-disabled': subMenu.enabled === false }">
-            <div *ngIf="subMenu.separatorBefore === true" class="dropdown-divider"></div>
-            <div *ngIf="subMenu.doubleSeparatorBefore === true">
-            <hr class="double-separator">
-            <hr class="double-separator">
-          </div>
-            <a [matTooltip]="subMenu.tooltip"
-            matTooltipPosition="right"
-            class="dropdown-item"
-            [routerLink]="['/map/', subMenu.id]"
+            <a [matTooltip]="subMenu.tooltip" matTooltipPosition="right"
+            class="dropdown-item" [routerLink]="['/map/', subMenu.id]" 
             routerLinkActive="mat-selected">
               <img src="assets/app-default/img/baseline-map-24px.svg"/>
               {{subMenu.name}}
@@ -71,16 +52,8 @@
 
         <div *ngIf="subMenu | checkElement : 'subMenuExternalLink'">
           <li class="activate .ml-auto" [ngClass]="{ 'li-disabled': subMenu.enabled === false }">
-            <div *ngIf="subMenu.separatorBefore === true" class="dropdown-divider"></div>
-            <div *ngIf="subMenu.doubleSeparatorBefore === true">
-              <hr class="double-separator">
-              <hr class="double-separator">
-            </div>
-            <a [matTooltip]="subMenu.tooltip"
-            matTooltipPosition="right"
-            class="dropdown-item"
-            [href]="subMenu.url"
-            target="_blank">
+            <a [matTooltip]="subMenu.tooltip" matTooltipPosition="right"
+            class="dropdown-item" [href]="subMenu.url" target="_blank">
               <img src="assets/app-default/img/baseline-open_in_new-24px.svg"/>
               {{subMenu.name}}
             </a>
@@ -96,11 +69,8 @@
 <!-- Content Page MainMenu. -->
 <div *ngIf="mainMenu.action === 'contentPage'">
   <li class="nav-item activate .ml-auto" [ngClass]="{ 'li-disabled': mainMenu.enabled === false }">
-    <a mat-button
-    [matTooltip]="mainMenu.tooltip"
-    matTooltipPosition="right"
-    class="nav-link"
-    routerLinkActive="mat-selected"
+    <a mat-button [matTooltip]="mainMenu.tooltip" matTooltipPosition="right"
+    class="nav-link" routerLinkActive="mat-selected"
     [routerLink]="['/content-page/', mainMenu.id]">
       {{mainMenu.name}}
     </a>
@@ -110,12 +80,8 @@
 <!-- Dashboard MainMenu. -->
 <div *ngIf="mainMenu.action === 'dashboard'">
   <li class="nav-item activate .ml-auto" [ngClass]="{ 'li-disabled': mainMenu.enabled === false }">
-    <a mat-button
-    [matTooltip]="mainMenu.tooltip"
-    matTooltipPosition="right"
-    class="nav-link"
-    routerLinkActive="mat-selected"
-    [routerLink]="['/dashboard/', mainMenu.id]">
+    <a mat-button [matTooltip]="mainMenu.tooltip" matTooltipPosition="right"
+    class="nav-link" routerLinkActive="mat-selected" [routerLink]="['/dashboard/', mainMenu.id]">
       {{mainMenu.name}}
     </a>
   </li>
@@ -124,12 +90,8 @@
 <!-- Map MainMenu. -->
 <div *ngIf="mainMenu.action === 'displayMap'">
   <li class="nav-item activate .ml-auto" [ngClass]="{ 'li-disabled': mainMenu.enabled === false }">
-    <a mat-button
-    [matTooltip]="mainMenu.tooltip"
-    matTooltipPosition="right"
-    class="nav-link"
-    routerLinkActive="mat-selected"
-    [routerLink]="['/map/', mainMenu.id]">
+    <a mat-button [matTooltip]="mainMenu.tooltip" matTooltipPosition="right"
+    class="nav-link" routerLinkActive="mat-selected" [routerLink]="['/map/', mainMenu.id]">
       {{mainMenu.name}}
     </a>
   </li>
@@ -138,10 +100,8 @@
 <!-- External Link MainMenu. -->
 <div *ngIf="mainMenu.action === 'externalLink'">
   <li class="nav-item activate .ml-auto" [ngClass]="{ 'li-disabled': mainMenu.enabled === false }">
-    <a mat-button
-    [matTooltip]="mainMenu.tooltip" matTooltipPosition="right"
-    [attr.href]="mainMenu.url" target="_blank"
-    class="nav-link">
+    <a mat-button [matTooltip]="mainMenu.tooltip" matTooltipPosition="right"
+    [attr.href]="mainMenu.url" target="_blank" class="nav-link">
       {{mainMenu.name}}
     </a>
   </li>
