--- a/infomapper/src/app/nav-bar/tab/tab.component.html
+++ b/infomapper/src/app/nav-bar/tab/tab.component.html
@@ -22,7 +22,7 @@
             <a [matTooltip]="subMenu.tooltip" matTooltipPosition="right"
             class="dropdown-item" [routerLink]="['/content-page/', subMenu.id]"
             routerLinkActive="mat-selected">
-              <i class="fa fa-file-text fa-lg" aria-hidden="true"></i>
+              <fa-icon class="fa-file-text" [icon]=faFileLines size="xl"></fa-icon>
               {{subMenu.name}}
             </a>
           </li>
@@ -33,7 +33,7 @@
             <a [matTooltip]="subMenu.tooltip" matTooltipPosition="right"
             class="dropdown-item" routerLinkActive="mat-selected"
             [routerLink]="['/dashboard/', subMenu.id]">
-              <i class="fa fa-tachometer fa-lg" aria-hidden="true"></i>
+              <fa-icon class="fa-gauge-high" [icon]=faGaugeHigh size="xl"></fa-icon>
               {{subMenu.name}}
             </a>
           </li>
