Fixed a menu bug for mobile & added some debugging/tests to hopefully fix a Leaflet error where the Map container is not found.

--- a/infomapper/src/app/content-page/content-page.component.css
+++ b/infomapper/src/app/content-page/content-page.component.css
@@ -1,5 +1,9 @@
 /* CLASSES */
 
+a {
+  color: #9db66b;
+}
+
 /* The inner container that displays the Content Page contents based on browser
 width. */
 .display-container {
