Initial commit for stories changes to Main & Sub menus.

--- a/infomapper/src/app/app.component.css
+++ b/infomapper/src/app/app.component.css
@@ -1,3 +1,10 @@
+/* TAGS */
+
+/*  */
+mat-sidenav-content {
+  overflow: hidden;
+}
+
 /* CLASSES */
 
 /* Sets the height and width of the content of the InfoMapper, e.g. Content Page
