--- a/infomapper/src/styles.css
+++ b/infomapper/src/styles.css
@@ -1,6 +1,8 @@
 @import 'assets/css/showdown-default.css';
 
 @import "../node_modules/select2/dist/css/select2.min.css";
+/* Import the styling for fullpage.js, the library used for Stories. */
+@import '~fullpage.js/dist/fullpage.min.css';
 /* @import "./app/map-components/dialog-content/dialog-gapminder/css/style.css"; */
 
 /* TAGS */
