--- a/infomapper/src/app/nav-bar/side-nav/side-nav.component.css
+++ b/infomapper/src/app/nav-bar/side-nav/side-nav.component.css
@@ -1,5 +1,10 @@
 /* CLASSES */
 
+/* The Story page subMenu file icon. */
+.fa-book-open {
+  margin-right: 2%;
+}
+
 /* The Content Page subMenu file icon. */
 .fa-file-text {
   margin-left: 2%;
